set logo image, change border menu, set pt pb z-index background position fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,3 +3,8 @@
   --red-ds : #ED5858; 
   --grey-ds : #E8E8E8; 
 }
+
+.background-black-ds{
+  background: var(--black-ds);
+}
+
